# shell-c

./: CMakeLists.txt  README.md
docs/: motivation.md
include/: cmd.h  parser.h  redirects.h  shell.h  utils.h
src/: cmd.c  main.c  parser.c  redirects.c  shell.c
src/builtins/: cd.c  echo.c
src/cmds/: cmd_cd.c  cmd_echo.c  cmd_exit.c  cmd_pwd.c  cmd_type.c
src/commands/: cd.c  echo.c  exit.c  pwd.c  type.c
